--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+
+2017-02-14  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+
+	* Version 0.3.1
+	* New class: EIGENVAL for treating EIGENVAL.
+
 2016-08-20  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
 
 	* Version 0.3.0
