Raise the version number

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2017-05-12  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+
+	* Version 0.4.0
+	* From this version site index starts from 0 when use POSCAR class
+	directory.  Follow the pythonic way
 
 2017-02-14  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
 
