--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-01-01  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+
+	* Version 0.4.2
+	* Gamma-only WAVECAR
+
 2017-12-27  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
 
 	* Version 0.4.1
