--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-01-04  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+
+	* Version 0.4.3
+	* Helper class: Bader
+
 2018-01-01  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
 
 	* Version 0.4.2
