--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-01-21  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+
+	* Version 0.4.4
+
 2018-01-04  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
 
 	* Version 0.4.3
