Before subtraction or merge, check the cell and atom positions.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2019-01-21  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+
+	* Version 0.5.0
+		* vsim_asc.py
+		* xdatcar.py
+	
+		* vaspy-chgcar.py
+		  * Before diff/merge, check whether cell vectors and position in two CHGCARs are consistent.
+
+
 2018-01-21  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
 
 	* Version 0.4.4
@@ -60,5 +70,4 @@
 		    Wall time: 53.6 s
 		    CPU times: user 1min 9s, sys: 11.3 s, total: 1min 20s
 		    Wall time: 1min 24s
-	* Use bz2 module in chgcar.py, doscar.py, outcar.py, and procar.py, 
-
+	* Use bz2 module in chgcar.py, doscar.py, outcar.py, and procar.py,
