--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,13 @@
+2019-08-15  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+  * Version 0.5.1
+	* Bug fix (Many!)
+
 2019-01-21  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
 
 	* Version 0.5.0
 		* vsim_asc.py
 		* xdatcar.py
-	
+
 		* vaspy-chgcar.py
 		  * Before diff/merge, check whether cell vectors and position in two CHGCARs are consistent.
 
