New method in POSCAR: split

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2019-08-15  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+2019-08-16  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
   * Version 0.5.1
+  * POSCAR.split
 	* Bug fix (Many!)
 
 2019-01-21  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
