--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2019-08-16  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+  * Version 0.5.1b
+
+
+2019-08-16  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
   * Version 0.5.1
   * POSCAR.split
 	* Bug fix (Many!)
