--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2019-08-17  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+  * Version 0.5.2
+  * Bug fix
+      * mesh3d.grid.slice
+
+
 2019-08-16  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
   * Version 0.5.1
   * POSCAR.split
