--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+
+2019-08-17  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+  * Version 0.5.3
+  * Bug fix
+
+
 2019-08-17  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
   * Version 0.5.2
   * Bug fix
