--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2019-08-19  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
+  * Version 0.5.4
+  * Bug fix
 
 2019-08-17  Ryuichi Arafune  <ryuichi.arafune@gmail.com>
   * Version 0.5.3
